fix header z-index

--- a/css/less/learn-kb.less
+++ b/css/less/learn-kb.less
@@ -39,7 +39,7 @@ body.columbia-breadcrumb-home-evaluation {
 	}
 
 	.elm-header {
-	    z-index: -2;
+	    z-index: 0;
 	}
 
 	.hero-wrapper {
